add reservation button

--- a/webapp/src/main/resources/templates/auth/reservations.html
+++ b/webapp/src/main/resources/templates/auth/reservations.html
@@ -38,7 +38,7 @@
                                 <th>Created date *</th>
                                 <th>State</th>
                                 <th>Book</th>
-                                <th>Waiting list max</th>
+                                <th>Number of maximum reservations possible</th>
                                 <th>Cancel the reservation</th>
                             </tr>
                             </thead>
