--- a/webapp/src/main/resources/templates/tables.html
+++ b/webapp/src/main/resources/templates/tables.html
@@ -72,7 +72,12 @@
                                                 </div>
                                                 <div th:unless="${bookNames != null and #lists.contains(bookNames, book.title)}">
                                                     <th th:if="${book.getNumber() == 0}">
-                                                        <button class="btn btn-default" type="submit" disabled>Not available</button>
+                                                        <div th:if="${book.getNbReservations() == book.getMaxNumber()}">
+                                                            <button class="btn btn-default" type="submit" disabled>Not available</button>
+                                                        </div>
+                                                        <div th:unless="${book.getNbReservations() == book.getMaxNumber()}">
+                                                            <button class="btn btn-default" type="submit" disabled>Available for reservation</button>
+                                                        </div>
                                                     </th>
                                                     <th th:unless="${book.getNumber() == 0}">
                                                         <form th:action="@{/reserved-book}" method="post">
