--- a/webapp/src/main/resources/templates/tables.html
+++ b/webapp/src/main/resources/templates/tables.html
@@ -42,7 +42,7 @@
                                         <th>Borrow</th>
                                         <th>Number of current reservations</th>
                                         <th>Number of maximum reservations possible</th>
-                                        <th>Expected return date</th>
+                                        <th>Expected return date of next book</th>
                                         <th>Make a reservation</th>
                                     </tr>
                                 </thead>
@@ -94,7 +94,12 @@
                                            and book.getNbReservations() == book.getMaxNumber()}">
                                             <td th:text="${book.getNbReservations()}"></td>
                                             <td th:text="${book.getMaxNumber()}"></td>
-                                            <td th:text="|${book.getLastReservationEndDate().getDay()}/${book.getLastReservationEndDate().getMonth()}/${book.getLastReservationEndDate().getYear()} ${book.getLastReservationEndDate().getHour()}:${book.getLastReservationEndDate().getMinute()}|"></td>
+                                            <div th:if="${book.getLastReservationEndDate() != null}">
+                                                <td th:text="|${book.getLastReservationEndDate().getDay()}/${book.getLastReservationEndDate().getMonth()}/${book.getLastReservationEndDate().getYear()} ${book.getLastReservationEndDate().getHour()}:${book.getLastReservationEndDate().getMinute()}|"></td>
+                                            </div>
+                                            <div th:unless="${book.getLastReservationEndDate() != null}">
+                                                <td></td>
+                                            </div>
                                         </div>
                                         <div th:unless="${book.getNumber() == 0 and bookNames != null and !#lists.contains(bookNames, book.title)
                                            and book.getNbReservations() == book.getMaxNumber()}">
@@ -105,7 +110,12 @@
                                         <div th:if="${book.getNumber() == 0 and bookNames != null and !#lists.contains(bookNames, book.title)
                                            and book.getNbReservations() < book.getMaxNumber()}">
                                             <td>
-                                                <button class="btn btn-success" type="submit">Make a reservation on this book</button>
+                                                <form th:action="@{/make-reservation}" method="post">
+                                                    <input type="hidden" name="id" th:value="${book.getId()}" />
+                                                    <input type="hidden" name="title" th:value="${book.getTitle()}" />
+                                                    <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+                                                    <button class="btn btn-success" type="submit">Make a reservation on this book</button>
+                                                </form>
                                             </td>
                                         </div>
                                         <div th:unless="${book.getNumber() == 0 and bookNames != null and !#lists.contains(bookNames, book.title)
